--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
             - webservice
         ports: 
             - 3000:3000
+        depends_on: 
+            - database_mysql  
 
     php_service:
         build: 
@@ -17,8 +19,8 @@ services:
             dockerfile: DockerFile
         networks: 
             - webservice
-        ports: 
-            - 9000:9000
+        depends_on: 
+            - database_mysql  
     
     nginx:
         image: nginx:alpine
@@ -29,10 +31,18 @@ services:
         networks:
             - webservice
         depends_on: 
-            - php_service    
-        links: 
-            - php_service    
-
+            - php_service  
+    
+    database_mysql: 
+        image: mysql
+        command: --default-authentication-plugin=mysql_native_password
+        ports:
+            - 3306:3306
+        environment:
+            MYSQL_DATABASE: 'example'
+            MYSQL_ROOT_PASSWORD: 'password1'
+        networks:
+            - webservice
 
 networks:
     webservice:
